Fix empty href for favicon link element causing page to be fetched twice.

Accroding to HTML spec
https://html.spec.whatwg.org/multipage/semantics.html#the-link-element, if the
href attribute in link element is empty, then the element does not define a link
and should be ignored.

BUG=669351

Review-Url: https://codereview.chromium.org/2575273002
Cr-Commit-Position: refs/heads/master@{#438762}

Former-commit-id: 24d87e2f1a18e9cc58a37126b85c921ea37ba695